Enhanced Performance and color contrast related issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,10 @@
     filter: drop-shadow(0.15rem 0.15rem 0 black);
   }
 
+  .drop-shadow-stroke-2 {
+    filter: drop-shadow(0.08rem 0.08rem 0 black);
+  }
+
   .inline-svg:hover{
     fill: #D67EB4;
   }
